added transcode bundle details
